--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ wheels/
 MANIFEST
 /static/
 static/
+settings_local.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
